solving level 3
