# pkg/swagger/docs/swagger.json
@@ -18,11 +18,6 @@
     "paths": {
         "/topsecret": {
             "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "To find the location of the ship and the message",
                 "consumes": [
                     "application/json"
@@ -61,6 +56,62 @@
                 }
             }
         },
+        "/topsecret_split": {
+            "get": {
+                "description": "To find the location of the ship and the message",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "TopSecretSplit"
+                ],
+                "summary": "To find the location of the ship and the message",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/topsecret.Ship"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "To delete all information saved in the application database about the satellites",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Additional Utils"
+                ],
+                "summary": "To delete all information saved in the application database about the satellites",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/topsecret_split/info": {
             "get": {
                 "description": "To get all information saved in the application database about the satellites",
@@ -71,7 +122,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "TopSecretSplit"
+                    "Additional Utils"
                 ],
                 "summary": "To get all information saved in the application database about the satellites",
                 "responses": {
@@ -82,6 +133,58 @@
                             "items": {
                                 "$ref": "#/definitions/topsecret.Satellite"
                             }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/topsecret_split/{satellite_name}": {
+            "post": {
+                "description": "To save information about the satellites",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "TopSecretSplit"
+                ],
+                "summary": "To save information about the satellites",
+                "parameters": [
+                    {
+                        "enum": [
+                            "kenobi",
+                            "skywalker",
+                            "sato"
+                        ],
+                        "type": "string",
+                        "description": "satellite_name",
+                        "name": "satellite_name",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "satellite",
+                        "name": "info",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/topsecret.RequestTopSecretSplit"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
                         }
                     },
                     "404": {
@@ -113,6 +216,20 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/topsecret.Satellite"
+                    }
+                }
+            }
+        },
+        "topsecret.RequestTopSecretSplit": {
+            "type": "object",
+            "properties": {
+                "distance": {
+                    "type": "number"
+                },
+                "message": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
                     }
                 }
             }
